--- a/Node/app/src/main/res/layout/activity_write.xml
+++ b/Node/app/src/main/res/layout/activity_write.xml
@@ -2,10 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <ListView
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/topics"
+        android:spinnerMode="dialog" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/corpse_text"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/topics"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Publish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView2"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="100dp"/>
+        android:layout_marginStart="103dp"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/send_text" />
+
+    <Button
+        android:text="Clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/send_text"
+        android:layout_toEndOf="@+id/send_text"
+        android:layout_marginStart="16dp"
+        android:id="@+id/clear_text" />
+
 </RelativeLayout>
