--- a/Node/app/src/main/res/layout/activity_main.xml
+++ b/Node/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,8 +19,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/btnconnect" />
+        android:layout_below="@+id/topicListView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="90dp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:id="@+id/topicListView" />
 
 </RelativeLayout>
