--- a/MobileNode/app/src/main/res/layout/activity_write.xml
+++ b/MobileNode/app/src/main/res/layout/activity_write.xml
@@ -2,76 +2,50 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
 
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
         android:id="@+id/topics"
-        android:spinnerMode="dialog" />
-    <!-- android:layout_alignParentStart="true"-->
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/corpse_text"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/topics"
-        />
-    <!-- android:layout_alignParentStart="true"-->
-   <!-- <Button
-        android:text="Publish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="103dp"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/send_text" />
+        android:spinnerMode="dialog"
 
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <!-- android:layout_alignParentStart="true"-->
+    <!-- android:layout_alignParentStart="true"-->
+    <!-- <Button
+         android:text="Publish"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentStart="true"
+         android:layout_marginStart="103dp"
+         android:layout_marginBottom="50dp"
+         android:id="@+id/send_text" />
+
+     <Button
+         android:text="Clear"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignTop="@+id/send_text"
+         android:layout_toEndOf="@+id/send_text"
+         android:layout_marginStart="16dp"
+         android:id="@+id/clear_text" />-->
     <Button
-        android:text="Clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/send_text"
-        android:layout_toEndOf="@+id/send_text"
-        android:layout_marginStart="16dp"
-        android:id="@+id/clear_text" />-->
-    <Button
-        android:text="Create Topic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/create_topic"
-        android:layout_marginBottom="21dp"
+        style="@android:style/Widget.Material.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Topic"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="116dp" />
 
     <!-- android:layout_alignParentStart="true"
         -->
 
-    <Button
-        android:text="Clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/clear_text"
-        android:layout_marginBottom="31dp"
-        android:layout_above="@+id/create_topic"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="72dp"
-        android:layout_marginStart="72dp" />
 
-    <Button
-        android:text="Publish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/send_text"
-        android:layout_alignTop="@+id/clear_text"
-        android:layout_toRightOf="@+id/clear_text"
-        android:layout_toEndOf="@+id/clear_text"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-         />
     <!-- android:layout_toEndOf="@+id/create_topic"-->
 </RelativeLayout>
