--- a/MobileNode/app/src/main/res/layout/activity_write.xml
+++ b/MobileNode/app/src/main/res/layout/activity_write.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="wrap_content"
         android:id="@+id/topics"
         android:spinnerMode="dialog"
 
@@ -33,15 +34,29 @@
          android:layout_toEndOf="@+id/send_text"
          android:layout_marginStart="16dp"
          android:id="@+id/clear_text" />-->
-    <Button
+    <!--<Button
         android:id="@+id/create_topic"
-        style="@android:style/Widget.Material.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Topic"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="116dp" />
+        android:layout_marginBottom="116dp" />-->
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/create_topic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:tint="@android:color/background_light"
+        app:backgroundTint="@android:color/holo_blue_dark"
+        app:fabSize="normal"
+        app:rippleColor="@android:color/background_light"
+        app:srcCompat="@drawable/add_topic"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        />
 
     <!-- android:layout_alignParentStart="true"
         -->
