Add fix and Energy

--- a/MobileNode/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MobileNode/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@android:drawable/ic_menu_edit"
-            android:title="Scrivi Topic" />
+            android:title="Publish Topic" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@android:drawable/ic_input_get"
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Settings" />
     </group>
 
     <item android:title="Communicate">
