--- a/MobileNode/app/src/main/res/layout/activity_set_filter.xml
+++ b/MobileNode/app/src/main/res/layout/activity_set_filter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,12 +8,14 @@
         android:id="@+id/textSetFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="19dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="19dp"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
    <!-- <ListView
         android:id="@+id/listSetFilter"
@@ -23,15 +26,17 @@
         android:layout_marginTop="19dp" />-->
     <GridView
         android:id="@+id/listSetFilter"
-        android:numColumns="2"
-        android:gravity="center"
-        android:columnWidth="50dp"
-        android:stretchMode="columnWidth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textSetFilter"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp" />
+        android:layout_marginTop="19dp"
+        android:columnWidth="50dp"
+        android:gravity="center"
+        android:numColumns="2"
+        android:stretchMode="columnWidth" />
+
+
 
 
 </RelativeLayout>
