--- a/MobileNode/app/src/main/res/layout/activity_set_filter.xml
+++ b/MobileNode/app/src/main/res/layout/activity_set_filter.xml
@@ -15,6 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="19dp"
         android:textAlignment="center"
+        android:textSize="21sp"
         android:textStyle="bold" />
 
    <!-- <ListView
